--- a/contacts/resources/public/html/index.html
+++ b/contacts/resources/public/html/index.html
@@ -1,6 +1,7 @@
 <html>
     <body>
         <div id="contacts"></div>
+        <script src="http://fb.me/react-0.9.0.js"></script>
         <script src="js/out/goog/base.js" type="text/javascript"></script>
         <script src="js/main.js" type="text/javascript"></script>
         <script type="text/javascript">goog.require("contacts.core");</script>
