--- a/contacts/resources/public/html/index.html
+++ b/contacts/resources/public/html/index.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <link href="css/main.css" rel="stylesheet"></link>
+    </head>
     <body>
         <div id="contacts"></div>
         <script src="http://fb.me/react-0.9.0.js"></script>
