--- a/contacts/resources/public/html/index.html
+++ b/contacts/resources/public/html/index.html
@@ -4,9 +4,6 @@
     </head>
     <body>
         <div id="contacts"></div>
-        <script src="http://fb.me/react-0.9.0.js"></script>
-        <script src="js/out/goog/base.js" type="text/javascript"></script>
-        <script src="js/main.js" type="text/javascript"></script>
-        <script type="text/javascript">goog.require("contacts.core");</script>
+        <script src="app.js"></script>
     </body>
 </html>
