--- a/contacts/resources/public/html/index.html
+++ b/contacts/resources/public/html/index.html
@@ -4,6 +4,6 @@
     </head>
     <body>
         <div id="contacts"></div>
-        <script src="app.js"></script>
+        <script type="text/javascript" src="js/app.js"></script>
     </body>
 </html>
