wip, delete all the old stuff, arrange for QCon demos

--- a/contacts/resources/public/html/demo2.html
+++ b/contacts/resources/public/html/demo2.html
@@ -4,6 +4,6 @@
     </head>
     <body>
         <div id="contacts"></div>
-        <script type="text/javascript" src="js/app.js"></script>
+        <script type="text/javascript" src="js/demo2.js"></script>
     </body>
 </html>
