--- a/contacts/resources/public/html/demo2.html
+++ b/contacts/resources/public/html/demo2.html
@@ -1,9 +1,10 @@
 <html>
     <head>
         <link href="css/main.css" rel="stylesheet"></link>
+        <title>Demo 2</title>
     </head>
     <body>
-        <div id="contacts"></div>
-        <script type="text/javascript" src="js/demo2.js"></script>
+        <div id="demo2"></div>
+        <script type="text/javascript" src="js/demo.js"></script>
     </body>
 </html>
