--- a/contacts/resources/public/html/demo1.html
+++ b/contacts/resources/public/html/demo1.html
@@ -1,9 +1,10 @@
 <html>
     <head>
         <link href="css/main.css" rel="stylesheet"></link>
+        <title>Demo 1</title>
     </head>
     <body>
-        <div id="contacts"></div>
-        <script type="text/javascript" src="js/demo1.js"></script>
+        <div id="demo1"></div>
+        <script type="text/javascript" src="js/demo.js"></script>
     </body>
 </html>
