--- a/contacts/resources/public/html/demo1.html
+++ b/contacts/resources/public/html/demo1.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <div id="demo1"></div>
-        <script type="text/javascript" src="js/demo.js"></script>
+        <script type="text/javascript" src="/js/demo.js"></script>
     </body>
 </html>
