--- a/contacts/resources/public/html/demo1.html
+++ b/contacts/resources/public/html/demo1.html
@@ -1,10 +1,19 @@
 <html>
     <head>
-        <link href="css/main.css" rel="stylesheet"></link>
+        <link href="/css/main.css" rel="stylesheet"></link>
+        <link href="/css/codemirror.css" rel="stylesheet"></head>
         <title>Demo 1</title>
     </head>
     <body>
-        <div id="demo1"></div>
+        <div id="demo1">
+            <div>
+                <textarea id="input"></textarea>
+                <button>Submit</button>
+            </div>
+            <div>
+                <div id="output"></div>
+            </div>
+        </div>
         <script type="text/javascript" src="/js/demo.js"></script>
     </body>
 </html>
