--- a/contacts/resources/public/html/demo1.html
+++ b/contacts/resources/public/html/demo1.html
@@ -7,11 +7,11 @@
     <body>
         <div id="demo1">
             <div>
-                <textarea id="input"></textarea>
-                <button>Submit</button>
+                <textarea id="input">[{:app/contacts [:person/first-name]}]</textarea>
+                <button id="submit">Submit</button>
             </div>
             <div>
-                <div id="output"></div>
+                <pre id="output"><pre>
             </div>
         </div>
         <script type="text/javascript" src="/js/demo.js"></script>
