--- a/contacts/resources/public/html/demo1.html
+++ b/contacts/resources/public/html/demo1.html
@@ -7,7 +7,8 @@
     <body>
         <div id="demo1">
             <div>
-                <textarea id="input">[{:app/contacts [:person/first-name]}]</textarea>
+                <textarea id="input">[{:app/contacts
+  [:person/first-name]}]</textarea>
                 <button id="submit">Submit</button>
             </div>
             <div>
