Submit -> Pull, simplify repl script

--- a/contacts/resources/public/html/demo1.html
+++ b/contacts/resources/public/html/demo1.html
@@ -9,7 +9,7 @@
             <div>
                 <textarea id="input">[{:app/contacts
   [:person/first-name]}]</textarea>
-                <button id="submit">Submit</button>
+                <button id="submit">Pull</button>
             </div>
             <div>
                 <pre id="output"><pre>
