--- a/contacts/resources/public/html/demo2.html
+++ b/contacts/resources/public/html/demo2.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link href="css/main.css" rel="stylesheet"></link>
+        <link href="/css/main.css" rel="stylesheet"></link>
         <title>Demo 2</title>
     </head>
     <body>
